Fix overflow on mobile and hover being overwritten

--- a/ui/static/styles.css
+++ b/ui/static/styles.css
@@ -7,7 +7,7 @@
 main {
     margin: auto;
     width: 100%;
-    height: 95vh;
+    height: 90vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -31,7 +31,7 @@ main {
 }
 
 .link:hover {
-    background-color: #292e42;
+    background-color: #292e42 !important;
 }
 
 .link a {
@@ -45,4 +45,5 @@ main {
 
 @media screen and (max-width: 600px) {
     .link {width: 100%;}
+    main {height: 90%;}
 }
